--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,8 @@
     <title>{% block title %}Título predeterminado{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="icon" href="/static/img/logo.png" type="image/x-icon">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -57,10 +58,14 @@
               </li>
               
             </ul>
-           
             <div class="text-center ">
                 <a class="nav-link" href="{{ url_for('logout') }}">Cerrar Sesión</a>  
-              </div>
+            </div>
+            <div class="text-center">
+              <a href="{{ url_for('descargar_pdf_manual') }}" target="_blank" >
+                <i class="btn-manual bi bi-question" data-toggle="tooltip"  data-placement="bottom" title="Manual de Usuario"></i>
+              </a>
+          </div>
           </div>
         </div>
       </nav>
@@ -73,7 +78,12 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+<script>
+  $(document).ready(function () {
+      $('[data-toggle="tooltip"]').tooltip();
+  });
+  </script>
+  
 <script>
   // Función para mostrar notificaciones
   function showNotification(message) {
